fixed mobile pdf div disappear

--- a/css/agency.css
+++ b/css/agency.css
@@ -682,3 +682,9 @@ body {
    display: block;
    border: solid 5px black;
 }
+
+@media screen and (max-width: 720px) {
+  .desktop-div {
+    display: none;
+  }
+}
