--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,19 @@ body {
     text-align: center;
 }
 
-a {
+a:link, a:visited {
     -webkit-transition: all .3s;
-    transition: all .3s
+    transition: all .3s;
+    cursor: pointer;
+    color: #515151;
+    text-decoration: underline;
+        
 }
+
+a:hover, a:active {
+    color: darkgoldenrod;
+}
+
 
 .uppercase {
     text-transform: uppercase;
@@ -107,6 +116,11 @@ blockquote {
     border-width: 0 0 0 2px;
     font-size: 12px;
     font-style: italic;
+}
+
+caption-text {
+    font-size: 12px;
+    color: #515151;
 }
 
 .v-center {
@@ -395,12 +409,11 @@ h5 {
 }
 
 .box-primary-nav li {
-    font-size: 22px;
-    font-size: 1.375rem;
+    font-size: 30px;
     font-weight: 300;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    margin: .2em 0;
+    margin: 1em 0;
     text-transform: capitalize;
 }
 
@@ -453,7 +466,7 @@ h5 {
 }
 
 .box-primary-nav li {
-    font-size: 18px;
+    font-size: 24px;
 }
 
 
@@ -745,6 +758,7 @@ b i:last-child {
     margin: 0 10px;
     -webkit-transition: all .2s ease-in-out .2s;
     transition: all .2s ease-in-out .2s;
+    text-decoration: none;
 }
 
 .portfolio .categories-grid .categories ul li a:hover,
@@ -931,10 +945,11 @@ footer img {
 ==================================================*/
 
 .top-bar {
-    color: #111111;
     padding: 120px 0 120px;
-    background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/01.jpg);
-    background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/01.jpg);
+    /*background-color: #eeb42c;*/
+
+    background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/wallpaper.jpg);
+    background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/wallpaper.jpg); 
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
@@ -1039,6 +1054,10 @@ ul.social-buttons li a:active {
 .size-30 {
     font-size: 30px;
     color: #555
+}
+
+.size-15 {
+    font-size: 15px;
 }
 
 .service-box {
@@ -1166,11 +1185,12 @@ textarea:focus {
     background: #ffbf00;
     padding: 10px 50px;
     border-radius: 0;
-    color: #fff;
+    color: #fff !important;
     margin-top: 20px;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 500;
+    text-decoration: none !important;
 }
 
 .btn-box:hover,
@@ -1208,6 +1228,7 @@ textarea:focus {
     }
     .portfolio .categories-grid .categories ul li a {
         margin-left: 0;
+        
     }
     .col-md-6 h3 {
         margin-top: 30px;
@@ -1223,7 +1244,6 @@ textarea:focus {
     }
     .box-primary-nav a {
         padding: 5px 1em;
-        font-size: 14px;
     }
     .box-primary-nav {
         padding: 80px 0 0;
@@ -1264,6 +1284,7 @@ textarea:focus {
         line-height: 30px;
     }
 }
+
 
 
 /* client
