--- a/css/style.css
+++ b/css/style.css
@@ -764,6 +764,26 @@ b i:last-child {
 }
 
 
+/* overlay PSWD
+==================================================*/
+#overlay {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    z-index: 1;
+}
+
+#input {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
 /* portfolio section
 ==================================================*/
 
@@ -1154,6 +1174,32 @@ ul.social-buttons li a:active {
 }
 
 .input-contact input[type="text"] {
+    height: 100%;
+    width: 100%;
+    border: 0;
+    padding: 0 20px;
+    float: left;
+    position: relative;
+    background-color: transparent;
+    z-index: 2;
+    font-size: 14px;
+    color: #9a9a9a;
+}
+
+.input-contact input[type="password"] {
+    height: 100%;
+    width: 100%;
+    border: 0;
+    padding: 0 20px;
+    float: left;
+    position: relative;
+    background-color: transparent;
+    z-index: 2;
+    font-size: 14px;
+    color: #9a9a9a;
+}
+
+.input-contact input[type="email"] {
     height: 100%;
     width: 100%;
     border: 0;
