New style changes
made some style changes

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600,700);
 
+
+
 /* General
 ==================================================*/
 
@@ -37,7 +39,8 @@ body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
     line-height: 1.8;
-    color: #393939
+    color: #393939;
+    scroll-behavior: smooth;
 }
 
 .no-padding {
@@ -71,6 +74,21 @@ a:hover, a:active {
     color: darkgoldenrod;
 }
 
+a.alternative {
+    -webkit-transition: all .3s;
+    transition: all .3s;
+    font-weight: 600;
+    cursor: pointer;
+    color: #515151;
+    border-bottom: 2px solid #515151;
+    padding-bottom: 3px;
+    text-decoration: none;
+}
+
+a.alternative:hover {
+    color: darkgoldenrod;
+    border-bottom: 2px solid darkgoldenrod;
+}
 
 .uppercase {
     text-transform: uppercase;
@@ -154,6 +172,12 @@ caption-text {
     padding-top: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
+}
+
+.cover-img {
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    border: 1px solid #E8E8E8;
 }
 
 /* typography
@@ -1035,6 +1059,7 @@ footer img {
     color: #555;
     text-decoration: none;
 }
+
 
 .social-ul {
     list-style: none;
