--- a/css/style.css
+++ b/css/style.css
@@ -1060,8 +1060,9 @@ footer img {
     background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/wallpaper.jpg); 
     background-size: cover;
     background-attachment: fixed;
-    background-position: center center;
+    background-position: center top;
     text-align: center;
+    background-repeat: no-repeat;
 }
 
 .top-bar h1 {
