--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ caption-text {
     border-radius: 6px;
     border: 1px solid #E8E8E8;
     padding: 30px;
+    margin: 15px;
 }
 
 .overview-box h3 {
