--- a/css/style.css
+++ b/css/style.css
@@ -1000,20 +1000,13 @@ b i:last-child {
     margin-top: 30px;
 }
 
-.portfolio-item-box p{
-    margin-left: 10px;
-    margin-right: 10px;
-}
+
 
 .portfolio-item-box img{
     border-radius: 6px 6px 0px 0px;
 }
 
 
-.portfolio-item-box strong{
-    margin-left: 10px;
-    margin-right: 10px;
-}
 
 .portfolio-item-box:hover {
     border: 1px solid #ffbf00;
@@ -1025,6 +1018,11 @@ b i:last-child {
     background-color: #F9F7F1;
     box-shadow: none;
     transform: scale(.95);
+}
+
+.portfolio-item-words {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
