--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ h3 {
 
 h4 {
     color: #111111;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 18px;
 }
 
@@ -241,6 +241,11 @@ h5 {
     color: darkgoldenrod;
 }
 
+h6 {
+    color: #111111;
+    font-weight: 500;
+    font-size: 16px;
+}
 
 /* preloader
 ==================================================*/
