--- a/css/style.css
+++ b/css/style.css
@@ -212,9 +212,19 @@ caption-text {
 }
 
 .icon-circle {
+  display: flex;          /* Use flexbox for alignment */
+  justify-content: center; /* Center horizontally */
+  align-items: center;    /* Center vertically */
+  width: 50px;            /* Set a fixed width */
+  height: 50px;           /* Set a fixed height */
   border-radius: 50%;
   border: 3px solid #ffbf00;
-  padding: 10px;
+}
+
+.icon-circle i {
+  width: 24px;            /* Adjust icon size */
+  height: 24px;
+  stroke-width: 2;        /* Adjust icon stroke width */
 }
 
 /* typography
