--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,12 @@ caption-text {
   stroke-width: 2;        /* Adjust icon stroke width */
 }
 
+.cover-img {
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    border: 1px solid #E8E8E8;
+}
+
 /* typography
 ==================================================*/
 
